# pyvisascripts

./: LICENSE  README.org  pyproject.toml
installscripts/linux-gpib/: install.sh  setup_gpib_usb_hs.sh
pyvisascripts/: query_srs.py
tests/: test_pyvisapy.py
