[tool.poetry]
name = "pyvisascripts"
version = "0.1.0"
description = ""
authors = ["Nick Sullivan <nsulmol@gmail.com>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.10"
pyvisa = "^1.13.0"
gpib-ctypes = "^0.3.0"
pyvisa-py = "^0.7.0"
pyusb = "^1.2.1"
fire = "^0.5.0"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.7"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
